--- a/index.html
+++ b/index.html
@@ -1,81 +1,104 @@
 <!DOCTYPE html>
-<html>
-<head>
 
+<html> <!-- Frases -->
 
-<meta charset="UTF-8"/
-<title>Anime</title>
-<style>
-td,h1{
-	background-color:#f60909
-	}
-h2{
-	background-color:#fe0000
-}
-	a{
-    background-color:#000000
-	}
-	</style>
-</head>
+  <head>
+ 
+    <meta charset="UTF-8"/>
+    <title>Anime</title>
+	<title>
+	One piece
+	</title>
+	<link rel ="stylesheet" href="estilo.css">
+	
+  </head>
 
-<body  align="center" style="background-color:#000000">
+  <body align="center" style="background-color: #28ec8a">
+  <table align="center">
+  <tr>
+  <td>
+   <h1 id="topo">Luffy:</h1>
+   <img src="imagen/one piece.gif"width="400" height="210"><img/>
+   <br/>
+   <p>Link clique aqui</p>
+  <br> <a href="https://pt.wikipedia.org/wiki/One_Piece" target="_blank"><img src="imagen/trio.jpeg"width="400" height="210"><img/><a/></br>
+   <br/>
+   <a href="https://pt.wikipedia.org/wiki/One_Piece"><a/>
+   
+   
+   <h1>ZORO</h1>
+   <img src="imagen/zoro.gif"width="400" height="210"><img/>
+   <h1>Luta</h1>
+    <p><img src="imagen/luta.gif"width="400" height="210"><img/><p/>
+	<br/>
+	<h1>Video</h1>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/NBDw84mcIbU?si=eLKRHb1vvyihHXwX" title="YouTube video player" 
+	frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+	referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<br/>
+	
+	 <table align="center">
+	 
+       <tr>
+     <td>luffy</td>
+	 <td>zoro</td>
+	  <td>luta</td>
+   </tr>
+   
+   <tr>
+   <td> <img src="imagen/one piece.gif"width="400" height="210"><img/></td>
+   <td><img src="imagen/zoro.gif"width="400" height="210"><img/></td>
+   <td><img src="imagen/luta.gif"width="400" height="210"><img/></td>
+  </tr>
+  <tr>
+    <td>Haki</td>
+    <td>Haki</td>
+	<td>Tiro</td>
+   </tr>
+   </table>
+   
+ 
+         <h2> Lista de vilão </h2>
+		<div align="center" >
+		
+		<table>
+		    <tr>
+		     <td></td>
+		        <td>
+		 
+ <ul>
 
-
-
-
-
-	<h1>Flamengo</h1>
-
-<img src="imagen/fla.jpeg"
-
-</br>
-<h1>Comemoracoes</h1>
-<table align="center">
-<tr>
-	<h2><td>Gabi</td></h2>
-	<h2><td>Vapo</td></h2>
-	<h2><td>Gol</td></h2>
-	</tr>
-
-	<tr>
-<td><img src="imagen/gabi.gif"width="518" height="518"><img/></td>
-<td><img src="imagen/vapo.gif"width="518" height="518"><img/></td>
-<td><img src="imagen/gabi1.gif"width="518" height="518"><img/></td>
-</tr>
-
-</table>
-
-<br>
-</br>
-<table align="center">
-
-<h3>><a  href="teste.html">Luffy</a></h3>
-<br/>
-<h3><a href="teste.html">Voltar</a></h3>
-
-
-<style>
-
-
-</style>
-<br>
-<h1>cor:<input type="color"></h1>
-<h1>Jogador:<input "checkbox"></h1>
-
-</br>
-</body>
-
-
-
-
-
-
-
-
-
-
-
-
+ 
+ <li>Kaido</li>
+ <li>Kizaru </li>
+ <li>Akainu </li>
+ <li>Donquixote Doflamingo</li>
+ <li>Barba Negra</li>
+ 
+ 
+ 
+ </ul>
+ </td>
+ </table>
+ </div>
+  </tr>
+   </td>
+   
+   <style>
+  
+   </style>
+   
+   
+   
+   </td>
+   </tr>
+   </table>
+   
+   
+   </br>
+    <h2><a href="teste.html">topo</a></h2>
+	<h2><a href="index.html">voltar</h2><a></h2>
+   
+  </body>
 
 </html>
-
